0.7.7
- Add "Preferences" menu:
  - Allow to (dis/en)able session autosaving
  - Allow to (dis/en)able checking for updates
  - Allow to (dis/en)able expert mode (#157)
- Bugfixes:
  - Display of fluorescence traces broken (#159)
  - Display of contour plots broken (#160)
0.7.6
- Add on-the-fly computation of average and SD for brightness
- Bugfixes:
  - Save sessions with deep (>1) hierarchies correctly
  - Better backwards compatibility for old session files
- Refactoring (dclab 0.2.5):
  - New standard column names
  - New class for handling filtering
  - Minor speed-up when dealing with hierarchies 
0.7.5
- Move from OpenCV to imageio (#129)
- Allow to select region and flow rate in batch processing (#132)
- Allow to create an inverted copy of a polygon filter (#127)
- Define new configuration file path with appdirs
- Add on-the-fly computation of volume (dclab 0.2.3dev23)
- Change: Disable "remove invalid events" in filtering to
  avoid computation of ancillary columns (performance)
0.7.4
- Add de-/select all buttons to Batch | Statistical analysis
- Add de-/select all buttons to export all events data (#148)
- Bugfixes:
  - Young's modulus not computed in batch analysis (#149)
  - dclab 0.2.3.dev4: Loading old session files with polygon filters (#152)
  - Sessions saved with Windows cannot be opened on Linux (#153)
  - Regression: save button did not work
0.7.3
- Add interface to calculate elastic modulus
- Bugfixes:
  - Regression analysis not working for some Windows regional settings (#142)
  - Filters not applied when loading a session
  - Regression: Not possible to manually set plotting range
  - Excluded events were plotted despite downsampling limit
  - Support columns containing NaN and infinite values
- dclab 0.2.3:
  - Add filtering option "remove invalid events" to remove nan/inf
  - Add methods to compute elastic modulus
- fcswrite 0.1.3dev6
  - Range for fluorescence data is always 2**15
  - Range for Deformation/Circularity is 100 or 1.0
0.7.2