@@ -72,7 +72,7 @@ class SubPanel(ScrolledPanel):
         """
         stemp = wx.BoxSizer(wx.HORIZONTAL)
         # these axes should not be displayed in the UI
-        ignore_axes = tlabwrap.IGNORE_AXES + analysis.GetUnusableAxes()
+        ignore_axes = analysis.GetUnusableAxes()
         choices = tlabwrap.get_config_entry_choices(key, item[0],
                                            ignore_axes=ignore_axes)
         if choices:
